# lopecode-dev

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  OPENCODE_PORT_PLAN.md  claude-lopebook-channel-spec.md  content.json  keyboard.md  metadev  package.json  user_journeys.md
tools/: add-agentic-loop.jsonl  add-all-opencode.jsonl  add-cell-tools.jsonl  add-llm-streaming.jsonl  add-message-types.jsonl  add-tool-interface.jsonl  backfill-colibri.ts  bootstrap-content-json.js  build-blank-notebook.ts  build-export-spec.ts  build-gallery-lopebook.js  build-zig-notebook.js  bulk-browser-smoke.sh  bulk-browser-validate.js  bulk-export-qc.js  bulk-jumpgate-test.js  bulk-smoke-test-worker.js  bulk-smoke-test.js  claude-code-pairing.js  code-metrics.js  delete-observable-node.mjs  depmap.json  export-notebook.jsonl  export-with-cells.jsonl  headless-pairing-host.ts  history-persist-test.js  incremental-smoke-test.sh  inject-lezer-libs.ts  inputs-reference-module.js  lope-boot-probe.ts  lope-bootconf.ts  lope-browser-repl.js  lope-browser-runner.ts  lope-build.ts  lope-bulk-jumpgate.js  lope-depmap.ts  lope-disassemble.js  lope-extract.sh  lope-jumpgate.js  lope-loader-register.js  (+22 more)
tools/channel/: README.md  claude-channels-module.js  claude-code-pairing-module.js  claude-lopebook-channel-spec.md  fakefs-init.js  inject-module.js  lopecode-channel.ts  mcp.json  package.json  post-tool-hook.sh  sync-module.ts  sync-version.ts
tools/justbash-build/: README.md  embed.py  entry.js  filesync-adapter.mjs  filesync-adapter.test.mjs  justbash.browser.bundle.js  (+5 more)
(+682 files in other folders)
