[project]
name = "lopecode-tools"
version = "1.0.0"
description = "Python utilities for working with lopecode HTML notebooks"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
lope-utils = "lope_utils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
